修改文件: _posts/2018-08-15-群晖NAS网络存储器：智能专属数据中心云存储.md

--- a/_posts/2018-08-15-群晖NAS网络存储器：智能专属数据中心云存储.md
+++ b/_posts/2018-08-15-群晖NAS网络存储器：智能专属数据中心云存储.md
@@ -7,8 +7,9 @@ author:     LZP
 header-img: img/bg-it1.jpg
 catalog: true
 tags:
-    - MetaWeblog
-    - Blog
+    - NAS
+    - 私有云
+    - 数据中心
 ---
 
 > 如今无论是工作生活都已经离不开“数据”了！工作文档、生活照片、精心收藏的音乐电影等都是不可丢失的宝贵资源，而同时拥有多台电脑、手机、平板的朋友比比皆是，分散各处的文件除了难管理外也容易损坏。怎样统一管理好自己的文件，保证资料安全同时又可以方便在各处使用和分享正是很多人头疼的问题。而这个 NAS 就为我搞定了一切……
