修改文件: _posts/2018-08-15-群晖NAS网络存储器：智能专属数据中心云存储.md

--- a/_posts/2018-08-15-群晖NAS网络存储器：智能专属数据中心云存储.md
+++ b/_posts/2018-08-15-群晖NAS网络存储器：智能专属数据中心云存储.md
@@ -30,6 +30,7 @@ tags:
 > * 市面上 NAS 的品牌相当多，经过一段时间的观察和对比，我最终选择了群晖 (Synology) 的一款4盘位的产品 Synology DS412+。因为我一直认为软件应用才是一款产品的灵魂，NAS也不例外！所以，在选择 NAS 时我最看重的正是软件。而群晖在软件应用方面的高度追求让我在众多品牌中注意到了它！它强大且精美的 DSM (Synology DiskStation Manage) 操作系统让我的很多想法和需求都能轻松得到实现，所以最终目标就这样锁定了。
 ![](https://img.iplaysoft.com/wp-content/uploads/2013/467de83064af_1481B/2.jpg)
 
+## 群晖NAS
 > * 群晖的产品全线均搭载了 DSM 系统，在目前看来应该能算是最强大的NAS操作系统之一了！而且他们还花费了很大的精力去开发各类配套的实用应用软件，其中不仅有 Windows、Mac 和 Web 网页版的，更赞的是他们在移动端方面也下足了功夫，提供了 iOS、Android 和部分 Windows Phone 的 APP，不仅个个实用，而且都做得相当精美。至少我认为，这种用心和诚意可不是一般的厂商可以做到的。像我这种对跨平台有需求并且对软件特别挑剔的人来说可谓相当的满意！
 
 > * 群晖的产品之所以在玩家们口中拥有极佳的口碑，除了硬件做工之外，其 DSM 系统绝对是功不可没的！它基于 Linux 内核开发，针对 NAS 的特性进行了深度的定制和优化，拥有类似 Windows 和 Mac 版友好的交互界面、优秀的稳定性、多任务处理能力、丰富的功能以及可由用户选择安装更多应用，让其品牌的 NAS 变得丰富多彩！
@@ -46,6 +47,9 @@ tags:
 > * DSM 的“套件中心”可以让你在这里一键安装各种各样的应用来增强你的 NAS，有点像苹果的 AppStore 的意味，目前看来内容还算丰富，点击安装按钮，稍等片刻之后就会在左上角的”开始菜单“中出现软件的图标了，点击就可以运行了，使用非常傻瓜化！下图就是我给 NAS 一键安装好的免费杀毒软件了～(话说它是直接运行在NAS里的，可定时查杀NAS里文件的病毒，完全不用占你电脑的资源，很好很强大)
 
 ![](https://img.iplaysoft.com/wp-content/uploads/2013/467de83064af_1481B/antivirus.jpg)
+
+
+## 群晖DSM功能详解
 
 > * 总之，DSM 非常强大易用而且功能丰富，群晖也在不断努力更新，就像我刚升级到 4.2 正式版，就新增了AirPlay、SMB2等一些重磅新特性，所以我对 DSM 和群晖的日后更新都抱有很大的期望啊。至于如何安装和设置 DSM，官方手册就有很详细的教程，我这里就不介绍了。对 DSM 有兴趣的同学可以通过这个链接去在线体验一下，下面我们就开始动手试玩了……
 
@@ -111,3 +115,12 @@ tags:
 > >  * 系统发生错误或改变时通过邮件/短信通知等
 > 14. 企业方面的应用：iSCSI 虚拟化存储、LUN复制/备份/快照；Active Directory & LDAP 的完整支持；架设 DHCP、DNS、RADIUS、V·P·N、SysLog、SNMP、邮件等服务器；网络共享打印机；架设网站服务器；而 DS412+ 和一些稍微高端的机还对 VMware vSphere、Windows Hyper-V 以及  Citrix XenServer 的虚拟化有完善的支持。
 
+## NAS的替代方案
+
+#### 方案一，开源私有云平台seafile和owncloud替代
+
+#### 方案二，虚拟机Hyper-V安装黑群晖
+
+> 备注说明：
+>> 1. 以上两种方案，在计算机关闭的时候，就无法实现NAS的远程功能。NAS功耗低，功能更专一，稳定性更强，可以365天24小时持续开着。但是，如果有专有服务器，在服务器上部署上面两类软件，就没有上面提及的问题了，因为服务器原本也是24小时开着的。但对于家庭用户，或者小公司而言，服务器是没有必要的，但是NAS提供的这些功能，还是很需要的，所以，部署一台NAS是很好的做法。
+>> 2. 另外，随着带宽越来越大，同时，免费的云服务种类众多，提供的存储空间和功能也更强大，完全可以满足个人和家庭，甚至是小企业的需要，再另外部署一台NAS就显得多余了。
