--- a/_posts/2018-08-21-个人信息工具集PIT.md
+++ b/_posts/2018-08-21-个人信息工具集PIT.md
@@ -29,7 +29,10 @@ tags:
 
 ### 5.博客写作工具：Windows Live Writer/Open Live Writer
 
-### 6.Markdown写作工具：Story-writer（小书匠）
+### 6.Markdown写作工具
+> * iOS: MWeb（收费）、Ulysses
+> * Android: 
+> * Windows: Yu Writer、Story-writer[小书匠]
 
 ### 7.最佳团队协作工具：DingTalk（钉钉）
 
@@ -38,3 +41,9 @@ tags:
 ### 9.最佳云储存：坚果云 + 百度网盘 + google网络硬盘
 
 ### 10.最佳图床：微博图床（Chrome插件）
+
+### 11.冥想、健康护士
+> * iOS：[冥想] Calm、Headspace、睿心灵犀冥想、[定时提醒] Time Out
+> * Windows: [定时提醒] 360安全卫士-健康护士
+> * Android: Well-冥想练习、Now正念冥想、灵犀、潮汐
+
