--- a/_posts/2018-08-22-手把手教你用GTD之一：理解GTD.md
+++ b/_posts/2018-08-22-手把手教你用GTD之一：理解GTD.md
@@ -1,17 +1,42 @@
 ---
 layout:     post
-title:      GTD中的项目、任务、行动
-subtitle:  手把手教你用GTD之一：项目、任务和行动
+title:      GTD的一些常见概念
+subtitle:  手把手教你用GTD之一：理解GTD
 date:       2018-08-21
 author:     LZP
 header-img: img/bg-it3.jpg
 catalog: true
 tags:
-    - PIT
+    - GTD
 ---
 
-项目（Project），简单来说就是“把一件事情做好”。这件事情必须有一个固定的交付目标，在指定-的时间内利用有限的资源在指定的预算内提交指定质量的实体交付物。只要是对交付目标提交实体交付物的事情，统称“项目”。可以看出，项目具有明确的开始点和结束点，有明确的目标。
+### GTD：GettingThingsDone
 
-项目中会包括较多的任务，任务的性质、难度各不相同。任务，又可以拆解为一个一个的行动。任务侧重结果，而行动侧重过程。每一个行动，都有一个小结果，汇总起来，指向任务的结果。
+>GettingThingsDone（把事情搞定）是一套时间管理系统，通过帮助你更好的跟踪和管理你的思绪、需要做的和想做的事，从而使你能在合适的情境中静下心，集中精神完成最重要的任务。
 
-以目标（结果）为导向，进行“三化”处理：能量化处理的量化，不能量化处理的细化，不能细化处理的流程化，最终，把项目的最终目标分解成各种子目标（子项目），把子目标分解成任务结果，把任务结果分解成行动结果。
+### 如何找到适合自己的GTD时间管理方法？
+- 1.用什么工具不重要，但是要避开功能过于庞大繁复的GTD工具；功能太多，超出实际使用需要，反而要耗费更多的精力来学习适应。
+
+- 2.列清单要适当，开始的时候尽量只写必须完成的事项，在必须完成的事项完成以后，在循序渐进加入其他事项。事项过多，容易因为压力过大而在开始前就已经放弃。我们在实践GTD的目的并不是列出所有未完成事项，而是让自己养成制定了就要完成的习惯。
+
+- 3.需要学会回顾和复盘，这也是GTD中的重要环节，在下一次制定计划可以根据之前的经验进行调整；
+
+- 4.目标要清晰，比如你想要养成每天看书的习惯，计划写成“每天看10页书”比“今天要看书”执行起来要容易些；
+
+- 5.注意简化执行难度，再比如还是读书这件事，计划写成“每天看10页”要比“每天看完1本书”来得行之有效；
+
+- 6.目标要随着自己的变化而提升难度，略微超出自己的舒适区域。当你已经养成了每天都能看10页书的习惯，不再觉得是负累时，目标就要稍做提升，逐渐提升效率。
+
+### GTD中的项目、任务、行动
+
+- 项目（Project），简单来说就是“把一件事情做好”。这件事情必须有一个固定的交付目标，在指定-的时间内利用有限的资源在指定的预算内提交指定质量的实体交付物。只要是对交付目标提交实体交付物的事情，统称“项目”。可以看出，项目具有明确的开始点和结束点，有明确的目标。项目可以分解成多个子项目，可以多级分解，即：子项目又可以分解成子子项目，可以一直分解下去。
+
+- 任务（task），项目中会包括较多的任务，任务的性质、难度各不相同。任务可以分解成多个子任务，可以多级分解，即：子任务又可以分解成子子任务，可以一直分解下去。
+  
+- 行动，任务和子任务可以拆解为一个一个的行动。任务侧重结果，而行动侧重过程。每一个行动，都有一个小结果，汇总起来，指向任务的结果。
+
+### 为什么GTD只要截止日期，无需开始日期
+
+> 因为GTD的目标就是把事情搞定，如果一个任务，或者一个行动，它的时间超过一天，对于执行来说，它的粒度就太大了，就必须继续细化（分解成多个子任务，或者拆解成多个行动），最终可执行的任务和行动都必须在一天之内。 
+> 
+> 以目标（结果）为导向，进行“三化”处理：能量化处理的量化，不能量化处理的细化，不能细化处理的流程化，最终，把项目的最终目标分解成各种子目标（子项目），把子目标分解成任务结果，把任务结果分解成行动结果。
