--- a/_posts/2018-08-28-我的信息工具集.md
+++ b/_posts/2018-08-28-我的信息工具集.md
@@ -147,7 +147,7 @@ tags:
 >>   * 直播帝+腾讯视频，看NBA；
 >>   * 爱奇艺万能播放器，本地播放和投屏；手机上用小米手机自带的视频播放器。
 >>   * Serviio，把电脑作为DLNA服务器，供电视、其它电脑、手机访问和播放各种媒体；类似的软件还有AllShare、kodi、mezzmo、WildMediaServer、FreeMi UPNP Media Server、Twonky Media Sever、PLEX。
->>   * Bubble-UPNP，手机上看DLNA服务器上的音视频和照片，以及把手机做DLNA服务器。类似的软件还有U-Media、Twonky、HTC DLNA、HW DLNA等。
+>>   * Bubble-UPNP，手机上看DLNA服务器上的音视频和照片，以及把手机做DLNA服务器。类似的软件还有Twonky、U-Media、HTC DLNA、HW DLNA等，最好的就是Bubble-UPNP了。
 >>       * Bubble-UPNP播放视频会调用系统里安装的播放器，如有多个播放器，可以自己选择。
 >>       * 小米视频、QQ浏览器自带的播霸、MoboPlayer、JPlayer、BSPlayer、MX Player都可以。
 >>       * 除了MX Player外，其它都支持MKV、mp4、rmvb、flv格式。
