--- a/_posts/2018-08-29-互联网主机入门.md
+++ b/_posts/2018-08-29-互联网主机入门.md
@@ -45,3 +45,13 @@ tags:
 >> * 注意2，每一次光猫重新拨号，获得的IP地址是不同的，为了能够固定访问到家里的媒体中心，可以申请一个免费的二级域名，解析到这个每次拨号都变的IP地址上。具体的简单方法：就是在提供媒体服务的计算机上装一个提供DDNS的工具，譬如花生壳，每次公网IP变化时，它会自动把新的IP地址提交过去，和你申请的固定二级域名绑定。
 >>
 > 到此，一个全环境的家庭媒体中心就OK了。同理，一个全环境的家庭文件中心或者云存储或者私有云，也可以依此部署。
+
+## 如何使用域名访问？
+### 通过DDNS把动态IP和二级域名绑定
+> 家庭宽带，每次断网重新连接后，IP地址都是不一样的，通过IP访问就很不方便。所以，需要通过DDNS（动态域名服务），在每次断网重新连接后，都把新的IP地址和一个域名绑定起来。花生壳、3322都提供DDNS服务，然后和路由器的DDNS设置结合起来，就可以通过域名访问了。
+> 譬如作者，就申请了一个花生壳的免费二级域名，每次通过http://我申请的名字.51vip.biz:23424/mediabrowser访问我家庭的媒体服务中心。但是，如此长的URL地址，输入起来的确不方便，下面有一个更好的方式。备注：“我申请的名字”因安全问题，在此省略了。
+
+### 域名解析的URL转发
+> * 第一步，到域名申请网站上（阿里云、腾讯云、百度云、等等），买一个自己喜欢的域名。很便宜，有些类型的域名每年只要十几块人民币，刚注册更有优惠，只要几块钱。
+> * 第二步，域名备案（国内绝多数服务商都需要你先备案域名后，才提供域名解析，要备案，又必须先买主机，拐着弯让你花钱，但是，在国外注册的域名不需要备案，可直接解析）。
+> * 第三步，域名解析，域名注册服务商都会提供域名解析服务，在域名管理的后台中，会有域名解析服务，添加一条显性URL或者隐形URL就可以了。譬如作者：添加了一个记录类型为“隐形URL”，主机记录为“m"，记录值为“http://我申请的名字.51vip.biz:23424/mediabrowser”的记录。这样，以后只要访问http://m.我申请的域名，就可以访问我家里的媒体主机了。备注：“我申请的名字”和“我申请的域名”，因安全问题，在此省略了。通过这种方式，大家也可以给自己喜欢的各种网站或者Web应用重命名，譬如用：http://z.我的域名，访问新浪网的某个栏目，http://stock.我的域名，访问雪球网的个人栏目。
